<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_24"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_about_us_24"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile_24"/>
        <item
            android:id="@+id/nav_privacy"
            android:title="@string/privacy"
            android:icon="@drawable/ic_privacy_24"/>
    </group>
    <item
        android:title="">
     <menu>
    <item
        android:title="@string/exit"
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit_24"/>
     </menu>
    </item>

</menu>