<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        style="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp"
        android:textColor="#363A43"
        android:gravity="center"
        android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    android:textColor="#363A43"
                    android:textColorHint="#507AB9"
                    android:background="#f2f5fa"
                    />
            </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/selectCardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_card"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#C6BEBE">

            <TextView
                android:id="@+id/card1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/card_1"
                android:maxLines="1"
                android:textSize="16sp"
                android:padding="16dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#C6BEBE">

            <TextView
                android:id="@+id/card2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/card_2"
                android:maxLines="1"
                android:textSize="16sp"
                android:padding="16dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#C6BEBE">

            <TextView
                android:id="@+id/card3_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/card_3"
                android:maxLines="1"
                android:textSize="16sp"
                android:padding="16dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

    <ImageView
        android:id="@+id/wave_tv"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/wave_green_upward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/wave_image_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
